# blockbop

./: CMakeLists.txt  main.cpp
client/: CMakeLists.txt  application.cpp  application.hpp  blockbop.cpp  blockbop.hpp  main.cpp
cmake/: FindOpenGLES3.cmake
engine/: CMakeLists.txt  application.cpp  application.hpp  audio_file.cpp  audio_file.hpp  audio_manager.cpp  audio_manager.hpp  charsets.cpp  charsets.hpp  config.hpp.in  init.cpp  init.hpp  library.cpp  library.hpp  pch.hpp  state.cpp  state.hpp  state_manager.cpp  state_manager.hpp  streaming_source.cpp  streaming_source.hpp  util.cpp  util.hpp
engine/al/: buffer.cpp  buffer.hpp  context.cpp  context.hpp  device.cpp  device.hpp  source.cpp  source.hpp  util.cpp  util.hpp
engine/al/extensions/: direct_channels.cpp  direct_channels.hpp  events.cpp  events.hpp  extension.cpp  extension.hpp  pause_device.cpp  pause_device.hpp
engine/state/: manager.cpp  manager.hpp  menu.cpp  menu.hpp  state.cpp  state.hpp  text_input.cpp  text_input.hpp
engine/tts/: chooser.cpp  chooser.hpp  espeak_ng.cpp  espeak_ng.hpp  speaker.hpp  tolk.cpp  tolk.hpp  window_title.cpp  window_title.hpp
server/: CMakeLists.txt  main.cpp
